🔒 Security Fix: Remove sensitive cookie files
- Remove .cursorindexingignore file
- Remove pornhub_cookies.json and related cookie files from Git tracking
- Enhanced .gitignore to prevent future cookie file uploads
- Added comprehensive cookie file patterns to .gitignore

⚠️ IMPORTANT: Cookie files should never be uploaded to public repositories!

--- a/.gitignore
+++ b/.gitignore
@@ -65,9 +65,17 @@ logs/*.log
 logs/*.txt
 !logs/README.md
 
-# Cookies (sensitive)
+# Cookies (sensitive) - NEVER upload these!
+cookies/**/*.txt
+cookies/**/*.json
 cookies/*.txt
 cookies/*.json
+*.cookies.txt
+*.cookies.json
+*_cookies.txt
+*_cookies.json
+pornhub_cookies.*
+youtube_cookies.*
 !cookies/README.md
 
 # Temporary files
